Fixed drawer right scrollbar animation.

--- a/src/styl/animation/overflow.styl
+++ b/src/styl/animation/overflow.styl
@@ -26,3 +26,50 @@
         overflow-y: hidden;
     }
 }
+
+@keyframes overflow-x-scroll {
+    from {
+        overflow-x: scroll;
+    }
+    to {
+        overflow-x: scroll;
+    }
+}
+
+@keyframes overflow-y-scroll {
+    from {
+        overflow-y: scroll;
+    }
+    to {
+        overflow-y: scroll;
+    }
+}
+
+@keyframes overflow-xy-scroll {
+    from {
+        overflow-x: scroll;
+        overflow-y: scroll;
+    }
+    to {
+        overflow-x: scroll;
+        overflow-y: scroll;
+    }
+}
+
+@keyframes position-absolute {
+    from {
+        position: absolute;
+    }
+    to {
+        position: absolute;
+    }
+}
+
+@keyframes position-fixed {
+    from {
+        position: fixed;
+    }
+    to {
+        position: fixed;
+    }
+}
